structural pseudo class

--- a/css/StructuralPseudoclass.css
+++ b/css/StructuralPseudoclass.css
@@ -1,3 +1,23 @@
-div>p:first-child{
+/* div>p:first-child{
     background-color: aqua;
+} */
+
+/* div>p:last-child{
+    background-color: aquamarine;
+} */
+
+/* div>p:nth-child(2n-1){
+    background-color: blue;
+} */
+
+div>i:first-of-type{
+    background-color: aqua;
+}
+
+div>i:last-of-type{
+    background-color: blueviolet;
+}
+
+div>i:nth-of-type(3){
+    background-color: brown;
 }
