--- a/css/BackgroundImgTask.css
+++ b/css/BackgroundImgTask.css
@@ -1,4 +1,24 @@
 #maindiv{
-    background-image: url("../image/background.jpg");
-    background-size: ;
+    border: 15px dashed black;
+    height: 100vh;
+    width: 100vw;
+    background: url("../image/background.jpg") top left, url("../image/mountains-5289671_1280.jpg") center center,url("../image/puppies-7331739_1280.jpg") bottom right;
+    background-size: 300px;
+    background-repeat: no-repeat;
+}
+h1{
+    text-align: center;
+    color: red;
+}
+h1::before{
+    content: "******";
+    color: red;
+}
+h1::after{
+    content: "******";
+    color: red;
+}
+p{
+    color: blue;
+    font-size: x-large;
 }
