--- a/css/Position.css
+++ b/css/Position.css
@@ -9,9 +9,18 @@
     left: 250px;
 } */
 
+#gp{
+    border: 2px solid black;
+    padding: 50px;
+    /* position: relative; */
+    background-color: blue;
+    height: 300vh;
+}
+
 #parent{
     border: 2px solid black;
     background-color: aqua;
+    /* position: relative; */
 }
 .child{
     border: 2px solid black;
@@ -20,13 +29,15 @@
 }
 #child1{
     background-color: red;
-    /* position: absolute;
-    left: 200px; */
+    /* position: fixed; */
+    position: sticky;
+    top: 0px;
+    /* bottom: 0px; */
 }
 #child2{
     background-color: rgb(255, 0, 221);
-    position: relative;
-    left: 200px;
+    /* position: relative;
+    left: 0px; */
 }
 #child3{
     background-color: green;
