--- a/css/PositionTask.css
+++ b/css/PositionTask.css
@@ -1,22 +1,19 @@
-#parent{
-    border: 2px solid black;
-    background-image: url("../image/mountains-5289671_1280.jpg");
+#maindiv{
+    border: 1px solid black;
+    position: relative;
+}
+#bgdiv{
+    border: 1px solid black;
     height: 100vh;
+    background-image: url("../image/puppies-7331739_1280.jpg");
     background-repeat: no-repeat;
-    background-size: 100%;
-    position: relative;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-size: 100% 100%;
+    opacity: 0.5;
 }
-
-#child1{
+#content{
+    border: 1px solid black;
+    position: absolute;
+    left: 0px;
+    top: 50px;
     text-align: center;
-    position: relative;
-    top: 100px;
-}
-
-#child2{
-    text-align: center;
-    position: relative;
-    top: 100px;
-
 }
