--- a/css/TransformTask.css
+++ b/css/TransformTask.css
@@ -26,7 +26,7 @@
     width: 400px;
     margin-top: 50px;
     margin-left: 750px;
-    background-image: url("../image/background.jpg") ;
+    background-image: url("https://cdn.pixabay.com/photo/2016/12/23/12/40/night-1927265_1280.jpg") ;
     background-repeat: no-repeat;
     background-size: 400px 250px;
     transition: 3s;
