--- a/css/AnimationBouncingBall.css
+++ b/css/AnimationBouncingBall.css
@@ -1,27 +1,36 @@
 #ball{
     border: 3px solid red;
     background-color: red;
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
     border-radius: 100px;
-    margin-top: 200px;
-    margin-left: 550px;
+    top: 200px;
+    left: 590px;
     position: relative;
     animation-name: bounce;
-    animation-duration: 10s;
+    animation-duration: 2s;
     animation-iteration-count: infinite;
 }
 #base{
     border: 3px solid black;
     background-color: black;
     height: 100px;
+    margin-top: 200px;
 }
 
 @keyframes bounce {
-    from{
-        bottom: 300px;
+    0%{
+        bottom: 50px;
     }
-    to{
-        /* top: 100px; */
+    25%{
+        bottom: 50px;
     }
+    50%{
+        top: 50px;
+    }
+    75%{
+        bottom: 50px;
+    }
+
+    
 }
