--- a/css/AnimationEmoji.css
+++ b/css/AnimationEmoji.css
@@ -1,89 +1,105 @@
-#face{
-    border: 2px solid black;
+#divisionhead{
+    border: 1px solid black;
+    height: 500px;
+    width: 500px;
     background-color: yellow;
-    height: 300px;
-    width: 300px;
-    border-radius: 500px;
-    position: relative;
-}
-
-#eye1{
-    border: 2px solid black;
-    background-color: burlywood;
-    height: 50px;
-    width: 80px;
+    display: inline-block;
     border-radius: 100%;
-    position: absolute;
-    margin-top: 70px;
+    margin-top: 100px;
+    margin-left: 350px;
+
+}
+#divisioneye1{
+    border: 1px solid black;
+    height: 100px;
+    width: 175px;
+    border-radius: 100%;
+    margin-left: 60px;
+    margin-top: 80px;
+    background-color: white;
+    display: inline-block;
+}
+#divisioneye2{
+    border: 1px solid black;
+    height: 100px;
+    width: 175px;
+    display: inline-block;
+    border-radius: 100%;
     margin-left: 30px;
+    background-color: white;
 }
-
-#eye2{
-    border: 2px solid black;
-    background-color: burlywood;
-    height: 50px;
-    width: 80px;
+#divisionskin1,#divisionskin2{
+    border: 1px solid black;
+    width: 150px;
+    height: 80px;
+    margin-top: 10px;
+    display: inline-block;
     border-radius: 100%;
-    position: absolute;
-    margin-top: 70px;
-    margin-left: 170px;
+    background-color: salmon;
 }
-#eyeball1{
-    border: 2px solid black;
-    background-color: black;
-    height: 15px;
-    width: 15px;
-    border-radius: 1000px;
-    margin-top: 15px;
-    margin-left: 20px;
-}
-#eyeball2{
-    border: 2px solid black;
-    background-color: black;
-    height: 15px;
-    width: 15px;
-    border-radius: 1000px;
-    margin-top: 15px;
-    margin-left: 20px;
-}
-#mouth{
-    border: 2px solid black;
-    background-color: #ffffff;
-    background-image: url("https://cdn.pixabay.com/photo/2017/01/31/14/45/lips-2024681_1280.png");
-    background-size: 120px 70px; 
-    height: 70px;
-    width: 120px;
+#eyeball1,#eyeball2{
+    border: 1px solid black;
     border-radius: 100%;
-    position: absolute;
-    margin-top: 150px;
-    margin-left: 80px;
-}
-.eyeball{
-    animation-name: eyeballmoving;
+    height: 30px;
+    width: 30px;
+    background-color: black;
+    display: inline-block;
+    margin-left: 50px;
+    margin-top: 20px;
+    animation-name: eyeball;
     animation-duration: 10s;
     animation-iteration-count: infinite;
+    position: relative;
+    animation-timing-function: linear;
+
+
 }
-@keyframes eyeballmoving {
+@keyframes eyeball{
     0%{
         
-        margin-top: 10px;
+        margin-top: 20px;
     }
     25%{
-        margin-top: 20px;
+        margin-top: 40px;
     }
     50%{
         margin-left: 10px;
-        margin-top: 20px
+        margin-top: 40px
     
     }
     75%{
         margin-right: 0px;
-        margin-left: 30px
+        margin-left: 120px
     }
     100%{
         
         margin-top: 20px;
     }
+ 
+}
 
+#divisionmouth{
+    border: 1px solid black;
+    background-image: url("../image/lips.jpg");
+    background-size: cover;
+    height: 120px;
+    width: 200px;
+    border-radius: 100%;
+    margin-top: 100px;
+    margin-left: 150px;
+    position: relative;
+    animation-name: mouth;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes mouth {
+   0%{
+    transform: scale(1,1);
+    }
+    50%{
+        transform: scaley(1.2);
+    }
+    
     
 }
